@@ -18,20 +18,16 @@ package com.aionemu.commons.scripting.impl.javacompiler;
 
 import com.aionemu.commons.scripting.ScriptClassLoader;
 import com.aionemu.commons.utils.ClassUtils;
-
 import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.tools.JavaFileObject;
-
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.net.URL;
-import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
+import java.net.*;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashSet;
@@ -41,8 +37,8 @@ import java.util.Set;
  * This classloader is used to load script classes. <br>
  * <br>
  * Due to JavaCompiler limitations we have to keep list of available classes here.
- *
- * @author SoulKeeper
+ * * @author SoulKeeper
+ * Modernized for Java 25 Compatibility
  */
 public class ScriptClassLoaderImpl extends ScriptClassLoader {
 
@@ -57,28 +53,29 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader {
 	 * Creates new ScriptClassLoader with given ClassFileManger. <br>
 	 * Parent ClassLoader is ClassLoader of current class: <pre>ScriptClassLoaderImpl.class.getClassLoader()</pre>
 	 *
-	 * @param classFileManager classFileManager of this classLoader
+	 * @param classFileManager
+	 * classFileManager of this classLoader
 	 */
 	ScriptClassLoaderImpl(ClassFileManager classFileManager) {
-		super(new URL[]{}, ScriptClassLoaderImpl.class.getClassLoader());
+		super(new URL[] {}, ScriptClassLoaderImpl.class.getClassLoader());
 		this.classFileManager = classFileManager;
 	}
 
 	/**
 	 * Creates new ScriptClassLoader with given ClassFileManger and another classLoader as parent
-	 *
-	 * @param classFileManager classFileManager of this classLoader
-	 * @param parent           parent classLoader
+	 * * @param classFileManager
+	 * classFileManager of this classLoader
+	 * @param parent
+	 * parent classLoader
 	 */
 	ScriptClassLoaderImpl(ClassFileManager classFileManager, ClassLoader parent) {
-		super(new URL[]{}, parent);
+		super(new URL[] {}, parent);
 		this.classFileManager = classFileManager;
 	}
 
 	/**
 	 * Returns ClassFileManager that is related to this ClassLoader
-	 *
-	 * @return classFileManager of this classLoader
+	 * * @return classFileManager of this classLoader
 	 */
 	public ClassFileManager getClassFileManager() {
 		return classFileManager;
@@ -95,10 +92,11 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader {
 
 	/**
 	 * Returns list of classes that are members of a package
-	 *
-	 * @param packageName package to search for classes
+	 * * @param packageName
+	 * package to search for classes
 	 * @return list of classes that are package members
-	 * @throws IOException if was unable to load class
+	 * @throws IOException
+	 * if was unable to load class
 	 */
 	public Set<JavaFileObject> getClassesForPackage(String packageName) throws IOException {
 		Set<JavaFileObject> result = new HashSet<JavaFileObject>();
@@ -106,6 +104,7 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader {
 		// load parent
 		ClassLoader parent = getParent();
 		if (parent instanceof ScriptClassLoaderImpl) {
+			@SuppressWarnings("resource") // Eclipse Warning Fix: We MUST NOT close the parent classloader
 			ScriptClassLoaderImpl pscl = (ScriptClassLoaderImpl) parent;
 			result.addAll(pscl.getClassesForPackage(packageName));
 		}
@@ -123,15 +122,15 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader {
 
 		// load package members from this classloader
 		Enumeration<URL> urls = getResources(packageName.replace('.', '/'));
-		while (urls.hasMoreElements()) {
+		while(urls.hasMoreElements()){
 			URL url = urls.nextElement();
-			String path = URLDecoder.decode(url.getPath(), StandardCharsets.UTF_8);
-			if (new File(path).isDirectory()) {
+			String path = URLDecoder.decode(url.getPath(), "UTF-8");
+			if(new File(path).isDirectory()){
 				Set<String> packageClasses = ClassUtils.getClassNamesFromPackage(new File(path), packageName, false);
 				classNames.addAll(packageClasses);
-			} else if (path.toLowerCase().contains(".jar!")) {
+			} else if(path.toLowerCase().contains(".jar!")){
 				File file = new File(path);
-				while (!file.getName().toLowerCase().endsWith(".jar!")) {
+				while(!file.getName().toLowerCase().endsWith(".jar!")){
 					file = file.getParentFile();
 				}
 				path = file.getPath().substring(0, file.getPath().length() - 1);
@@ -153,9 +152,12 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader {
 				BinaryClass bc = new BinaryClass(cn);
 				try {
 					byte[] data = getRawClassByName(cn);
-					OutputStream os = bc.openOutputStream();
-					os.write(data);
-				} catch (IOException e) {
+					// Menggunakan try-with-resources untuk OutputStream
+					try (OutputStream os = bc.openOutputStream()) {
+						os.write(data);
+					}
+				}
+				catch (IOException e) {
 					log.error("Error while loading class from package " + packageName, e);
 					throw e;
 				}
@@ -169,36 +171,31 @@ public class ScriptClassLoaderImpl extends ScriptClassLoader {
 	/**
 	 * Finds class with the specified name from the URL search path. Any URLs referring to JAR files are loaded and opened
 	 * as needed until the class is found.
-	 *
-	 * @param name the name of the class
+	 * * @param name
+	 * the name of the class
 	 * @return the resulting class data
-	 * @throws IOException              if failed to load class
+	 * @throws IOException
+	 * if failed to load class
 	 * @throws IllegalArgumentException if failed to open input stream for class
 	 */
 	protected byte[] getRawClassByName(String name) throws IOException {
 		String resourceName = name.replace('.', '/').concat(".class");
 		URL resource = getResource(resourceName);
-		InputStream is = null;
 		byte[] clazz = null;
 
-		try {
-			is = resource.openStream();
+		// Menggunakan try-with-resources agar InputStream otomatis tertutup, bersih, dan tanpa memory leak
+		try (InputStream is = resource.openStream()) {
 			clazz = IOUtils.toByteArray(is);
-		} catch (IOException e) {
+		}
+		catch (IOException e) {
 			log.error("Error while loading class data: " + name, e);
 			throw e;
-		} catch (NullPointerException e) {
+		}
+		catch(NullPointerException e){
 			log.error("Can't open input stream for resource: " + name);
 			throw new IllegalArgumentException("Failed to open input stream for resource: " + name);
-		} finally {
-			if (is != null) {
-				try {
-					is.close();
-				} catch (IOException e) {
-					log.error("Error while closing stream", e);
-				}
-			}
 		}
+		
 		return clazz;
 	}
 
